--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "swiper": "^11.1.14",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
