--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@use-gesture/react": "^10.3.1",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "swiper": "^11.1.14",
     "zustand": "^5.0.0-rc.2"
