--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@use-gesture/react": "^10.3.1",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
+    "react-device-detect": "^2.2.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
