--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
     "clsx": "^2.1.1",
+    "eventemitter3": "^5.0.1",
     "lodash-es": "^4.17.21",
     "react": "^18.3.1",
     "react-device-detect": "^2.2.3",
