--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
