--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "^6.1.2",
     "@eslint/js": "^9.9.0",
     "@types/node": "^22.7.0",
