--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.li1games.cards",
-  "appName": "cards",
-  "webDir": "dist"
+    "appId": "com.li1games.cards",
+    "appName": "Hokm",
+    "webDir": "dist"
 }
